[package]
name = "keyboard_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "0.1.0"
axum = "0.6.20"
colored = "2.0.4"
getrandom = { version = "0.2.10", features = ["js"] }
hyper = { version = "0.14.27", features = ["full"] }
rand = "0.8.5"
rayon = "1.7.0"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
